--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 <body>
     <div class="container">
         <h1>Esercizio per Casa</h1>
+        <!-- ONLY 1 COL ROW -->
         <div class="row">
             <div class="col-1">
                 <div class="box">1 col</div>
@@ -49,6 +50,24 @@
             </div>
             <div class="col-1">
                 <div class="box">1 col</div>
+            </div>
+        </div>
+        <!-- SECOND ROW -->
+        <div class="row">
+            <div class="col-2">
+                <div class="box">col</div>
+            </div>
+            <div class="col-5">
+                <div class="box">col</div>
+            </div>
+            <div class="col-5">
+                <div class="box">col</div>
+            </div>
+        </div>
+        <!-- ROW WITH ONE COL-12 -->
+        <div class="row">
+            <div class="col-12">
+                <div class="box">12 col</div>
             </div>
         </div>
     </div>
