--- a/index.html
+++ b/index.html
@@ -70,6 +70,36 @@
                 <div class="box">12 col</div>
             </div>
         </div>
+        <!-- ROW 8 + 2 + 2 COL -->
+        <div class="row">
+            <div class="col-8">
+                <div class="box">8 col</div>
+            </div>
+            <div class="col-2">
+                <div class="box">2 col</div>
+            </div>
+            <div class="col-2">
+                <div class="box">2 col</div>
+            </div>
+        </div>
+        <!-- ROW 1 + 2 + 2 + 6 + 1 ROW -->
+        <div class="row">
+            <div class="col-1">
+                <div class="box">1 col</div>
+            </div>
+            <div class="col-2">
+                <div class="box">2 col</div>
+            </div>
+            <div class="col-2">
+                <div class="box">2 col</div>
+            </div>
+            <div class="col-6">
+                <div class="box">6 col</div>
+            </div>
+            <div class="col-1">
+                <div class="box">1 col</div>
+            </div>
+        </div>
     </div>
     
 </body>
