Complementary row add

--- a/index.html
+++ b/index.html
@@ -100,7 +100,73 @@
                 <div class="box">1 col</div>
             </div>
         </div>
+        <!-- NEST COL -->
+        <div class="row mb-20">
+            <div class="col-6 flex-container">
+                <div class="col-2 bgc-lightblue">
+                    <div class="box bgc-lightgreen">Nested 2 col</div>
+                </div>
+                <div class="col-2 bgc-lightblue">
+                    <div class="box bgc-lightgreen">Nested 2 col</div>
+                </div>
+                <div class="col-8 bgc-lightblue">
+                    <div class="box bgc-lightgreen">Nested 8 col</div>
+                </div>
+            </div>
+            <div class="col-6 flex-container">
+                <div class="col-6 bgc-lightblue">
+                    <div class="box bgc-lightgreen">Nested 6 col</div>
+                </div>
+                <div class="col-6 bgc-lightblue">
+                    <div class="box bgc-lightgreen">Nested 6 col</div>
+                </div>
+            </div>
+        </div>
+        <!-- COMPLEMENTARY ROW -->
+        <div class="row">
+            <div class="col-12">
+                <div class="box"></div>
+            </div>
+            <div class="col-1">
+                <div class="box"></div>
+            </div>
+            <div class="col-11">
+                <div class="box"></div>
+            </div>
+            <div class="col-2">
+                <div class="box"></div>
+            </div>
+            <div class="col-10">
+                <div class="box"></div>
+            </div>
+            <div class="col-3">
+                <div class="box"></div>
+            </div>
+            <div class="col-9">
+                <div class="box"></div>
+            </div>
+            <div class="col-4">
+                <div class="box"></div>
+            </div>
+            <div class="col-8">
+                <div class="box"></div>
+            </div>
+            <div class="col-5">
+                <div class="box"></div>
+            </div>
+            <div class="col-7">
+                <div class="box"></div>
+            </div>
+            <div class="col-6">
+                <div class="box"></div>
+            </div>
+            <div class="col-6">
+                <div class="box"></div>
+            </div>
+            </div>
+        </div>
     </div>
+
     
 </body>
 </html>
